[package]
name = "pi_arr"
version = "0.15.0"
authors = ["zmax <zmax@gaia.world>"]
edition = "2021"
description = "lock-free & auto-expansion array"
repository = "https://github.com/GaiaWorld/pi_arr.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "array", "pi_arr"]

[dependencies]
pi_null = "0.1"
pi_share = "0.4"
