[package]
name = "pi_arr"
version = "0.30.1"
authors = ["zmax <zmax@gaia.world>"]
edition = "2021"
description = "lock-free & auto-expansion array"
repository = "https://github.com/GaiaWorld/pi_arr.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "array", "pi_arr"]

[dependencies]
pi_share = "0.5"
pi_vec_remain = "0.2"
pi_buckets = "0.1"

[features]
rc = ["pi_share/rc"]

[dev-dependencies]
rand = "0.8"
pcg_rand = "0.13"
